# sutra

./: .gitignore  LICENSE  README.md  Sutra-demo.ipynb  Sutra-demo.md  __init__.py  pyproject.toml  scratch.py
sutra/: 1_Home.py  CLI.py  WEB.py  app_v6.py  app_v7.py  file_io.py  logger.py  measurement.py  model.py  plots.py  pyCLI.py  streamlit_bootstrap.py  streamlit_logger.py  wcs_utils.py
sutra.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sutra/.streamlit/: config.toml
sutra/data/: hi.surface.density.r13p5.fits  taurus-test.fits
sutra/pages/: 2_Identification.py  3_Properties.py
sutra/predictors/: HGBS-C_64v2_trial-5-WBCE-processor-v2.dill  HGBS-C_64v2_trial-5-WBCE-processor.dill  HGBS_C_64v2_trial-5-WBCE.dill  HiGAL-C_64v2_trial-5-WBCE-processor-v2.dill  HiGAL-C_64v2_trial-5-WBCE-processor.dill  HiGAL_C_64v2_trial-5-WBCE-weights.h5
sutra/profiler/: Filament.py  FitFil.py  PlotFil.py  plummer.py  profiling-bkup.py  profiling.py
sutra/profilerV2/: beamProps.py  fitUtils.py  plummer.py  prob2skl.py  radprof.py  reconnect.py
sutra/tracer/: ML_utility.py  __init__.py  experiment.py  modifiers.py  predictor.py  utility_v2.py
sutra/tracer/old_scripts/: astroplot.py  filnet.py  generate_train_data.py  identifil.py  u-net.py  utility.py  utility_no_wcs.py
